welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: ';' expected but '=' found.
    T[i] = getCouleurSol()
         ^Array1:25: error: identifier expected but integer literal found.
  setCouleurBrosse(T[H-1])
                       ^Array1:28: error: ']' expected but '}' found.
} 
^